--- a/tempalte/package.json
+++ b/tempalte/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "template",
-  "version": "0.1.0",
+  "name": "{{ name }}",
+  "version": "{{ version }}",
+  "description": "{{ description }}",
+  "author": "{{ author }}",
   "private": true,
   "scripts": {
     "start": "node bin/www",
